# refab

./: Cargo.toml  LICENSE.txt  Makefile  README.md  error.2.txt  error.txt
patterns/: 8ball.yaml
patterns/8ball/: system.md
patterns/aida/: system.md
patterns/anachronisms/: system.md
patterns/anonymize/: system.md
patterns/chess/: system.md
patterns/comment/: README.md  system.md
patterns/dejargonize/: system.md
patterns/detect_fallacies/: system.md
patterns/detect_language/: system.md
patterns/enrich/: system.md
patterns/etymology/: system.md
patterns/from_emoji/: system.md
patterns/imagine/: system.md
patterns/keywords/: system.md
patterns/lowcharts/: system.md
patterns/more_like_this/: system.md
patterns/ner/: system.md
patterns/odd_one_out/: system.md
patterns/sentiment/: system.md
patterns/spread/: system.md
patterns/to_ascii_art/: system.md
patterns/to_commit/: system.md
patterns/to_cue/: system.md
patterns/to_curl/: system.md
patterns/to_dot/: system.md
patterns/to_emoji/: system.md
patterns/to_json/: system.md
patterns/to_lilypond/: system.md
patterns/to_pattern/: system.md
patterns/to_pg/: system.md
patterns/to_plant/: system.md
patterns/to_q/: system.md
patterns/to_rdf/: system.md
patterns/to_regex/: system.md
patterns/to_sqlite/: system.md
patterns/to_svg/: system.md
patterns/to_vegan/: system.md
patterns/to_yaml/: system.md
patterns/translate/: system.md
patterns/unix/: system.md
patterns/vectorspace/: system.md
src/: ai.rs  cmd.rs  fabric.rs  main.rs
