[package]
name = "refab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
dotenv = "0.15.0"
exitcode = "1.1.2"
openai = "1.0.0-alpha.14"
serde = "1.0.197"
serde_json = "1.0.114"
tokio = "1.36.0"
